--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
   <!-- Üst Kısım -->
   <div class="header-container">
-    <h1 class="title-animation">SAKİBE TEKİN PERFUME</h1>
+    <h1 class="title-animation">SAKİBE TEKİN PERFUME-ERKEK</h1>
   </div>
 
   <!-- PDF Gösterim Alanı -->
